--- a/ui/app/static/style.css
+++ b/ui/app/static/style.css
@@ -95,6 +95,22 @@ input.small {
   text-decoration: none;
 }
 
+
+/* TREASURY BADGE */
+.treasury-badge {
+  display: inline-block;
+  padding: 0.1rem;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  border-radius: 0.2rem;
+  vertical-align: baseline;
+  opacity: 0.8;
+}
+
+.treasury-badge a {
+  text-decoration: none;
+}
+
 /* TEXT */
 .not-bold {
   font-weight: normal;
@@ -107,6 +123,10 @@ input.small {
 /* COLORS  */
 a {
   color: #007bff;
+}
+
+.treasury-badge a {
+  color: white;
 }
 
 nav {
