Working OIDC auth

--- a/ui/app/templates/auth/login.jinja2
+++ b/ui/app/templates/auth/login.jinja2
@@ -8,4 +8,6 @@
     {{ render_form(form) }}
 </form>
 
+<p><a href="/auth/oidc/login" class="button">Login with OpenID Connect</a></p>
+
 {% endblock %}
