--- a/ui/app/templates/split/edit.jinja2
+++ b/ui/app/templates/split/edit.jinja2
@@ -1,6 +1,6 @@
 {% extends 'base.jinja2' %}
 {% from 'widgets/entity_selector.jinja2' import entity_selector %}
-{% from 'widgets/tag_manager.jinja2' import tag_manager %}
+{% from 'widgets/tag_selector.jinja2' import tag_selector %}
 {% from 'form.jinja2' import render_form %}
 
 {% block title %}Edit split {{ split.id }}{% endblock %}
@@ -14,12 +14,13 @@
                 {{ entity_selector('recipient_entity', split.recipient_entity.name, split.recipient_entity.id) }}
             </td>
         </tr>
-        {{ render_form(form, except=('recipient_entity_name', 'recipient_entity_id'), new_table=False) }}
+        {{ render_form(form, except=('recipient_entity_name', 'recipient_entity_id', 'tag_ids'), new_table=False) }}
+        {# <tr>
+            <td>Tags</td>
+            <td>{{ tag_selector('tag_ids', all_tags, form.tag_ids.data or []) }}</td>
+        </tr> #}
     </table>
 </form>
-<h2>Tags</h2>
-{{ tag_manager("splits", split.id, split.tags, all_tags) }}
 
-<!-- Include the JS widget file -->
 <script src="/static/js/entitySelector.js"></script>
 {% endblock %}
