--- a/ui/app/templates/entity/edit.jinja2
+++ b/ui/app/templates/entity/edit.jinja2
@@ -1,16 +1,26 @@
 {% extends 'base.jinja2' %}
 {% from 'form.jinja2' import render_form %}
-{% from 'widgets/tag_manager.jinja2' import tag_manager %}
+{% from 'widgets/tag_selector.jinja2' import tag_selector %}
 
-{% block title %}Edit entity {{ entity.id }} {{ entity.name }}{% endblock %}
+{% block title %}Edit entity {{ entity.id }}{% endblock %}
 
 {% block content %}
 <form method="post">
     <h2>Entity</h2>
-    {{ render_form(entity_form) }}
+    <table>
+        {{ render_form(entity_form, except=('entity-tag_ids',), new_table=False) }}
+    </table>
+
     <h2>Auth</h2>
     {{ render_form(auth_form) }}
+
+    <h2>Tags</h2>
+    <table>
+        <tr>
+            <td>Tags</td>
+            <td>{{ tag_selector('entity-tag_ids', all_tags, entity_form.tag_ids.data or []) }}</td>
+        </tr>
+    </table>
 </form>
-<h2>Tags</h2>
-{{ tag_manager("entities", entity.id, entity.tags, all_tags) }}
+
 {% endblock %}
