--- a/ui/app/templates/auth/login.jinja2
+++ b/ui/app/templates/auth/login.jinja2
@@ -1,11 +1,29 @@
 {% extends 'base.jinja2' %}
-{% from 'form.jinja2' import render_form %}
 
-{% block title %}Login{% endblock %}
+{% block body_class %}login-page{% endblock %}
 
 {% block content %}
-<form method="post">
-    {{ render_form(form) }}
-</form>
+<div class="login-container">
+    <div class="login-card">
+        <div class="login-header">
+            <h2 class="login-title">Welcome to Refinance</h2>
+            <p class="login-subtitle">Enter your name to access your account</p>
+        </div>
 
+        <form method="post" class="login-form">
+            {{ form.csrf_token }}
+
+            <div class="form-group">
+                <label for="{{ form.entity_name.id }}" class="form-label">{{ form.entity_name.label.text }}</label>
+                <div class="input-wrapper">
+                    {{ form.entity_name(class="form-input", placeholder="Enter your name", autocomplete="username") }}
+                </div>
+            </div>
+
+            <div class="form-group">
+                {{ form.submit(class="login-button") }}
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
