--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 </head>
 
-<body>
+<body class="{% block body_class %}{% endblock %}">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
